# pi-stock-analysis

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
agents/: alt-data-analyst.md  catalyst-analyst.md  china-market-analyst.md  company-orchestrator.md  company-screener.md  data-collector.md  equity-report-writer.md  fundamental-analyst.md  industry-analyst.md  macro-analyst.md  market-daily-orchestrator.md  quant-analyst.md  report-validator.md  risk-analyst.md  roadmap-walker.md  scorer.md  screening-report-writer.md  search-agent.md  sector-screener.md  supply-chain-analyst.md  team-lead-workflow.md  team-lead.md
assets/: report_styles.css
docs/: architecture.md  porting-review-claude-plugin-to-pi.md  roadmap-next-steps.md  template-rendering-migration-plan.md
references/: data_source_matrix.md  frameworks_behavioral.md  frameworks_bottleneck_investing.md  frameworks_macro_quant.md  frameworks_mauboussin.md  frameworks_narrative_structure.md  frameworks_risk_alt.md  frameworks_taleb_graham.md  frameworks_value_growth.md  gics_taxonomy.md  institutional_odd.md  international_markets.md  microstructure-framework.md  scoring_calibration.md  sector_metrics.md
schemas/: best-picks-result.json  company-list.json  company-orchestrator-result.json  critic-finding.json  ecosystem-health.json  industry-trajectory.json  lens-verdict.json  refute-verdict.json  report-result.json  scoring-result.json  sector-scores.json  shared-data.json  stage-result.json  sub-industry-deepdive.json  validation.json  walk-result.json
(+154 files in other folders)
