[project]
name = "stock-analysis-scripts"
version = "1.05.18"
description = "Python scripts for stock analysis plugin - deterministic calculations, data fetching, and scoring"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "yfinance>=0.2.40",
    "numpy>=1.24",
    "akshare>=1.14",
    "pytrends>=4.9",
    "praw>=7.7",
    "statsmodels>=0.14",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b",
    "scipy>=1.10",
    "arch>=6.0",
    "baostock>=0.9.1",
]

[dependency-groups]
dev = []
